<?xml version="1.0" encoding="utf-8"?>



<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/DoneToday"
                android:layout_width="307dp"
                android:layout_height="37dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="124dp"
                android:text="@string/DoneToday"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="@+id/Koulu"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radioGroup"
                android:layout_width="389dp"
                android:layout_height="61dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="36dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/Mieliala">

                <RadioButton
                    android:id="@+id/radio_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:background="@drawable/mood1"

                    android:onClick="onRadioButtonClicked" />


                <RadioButton
                    android:id="@+id/radio_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mood2"
                    android:onClick="onRadioButtonClicked"

                    />

                <RadioButton
                    android:id="@+id/radio_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mood3"
                    android:onClick="onRadioButtonClicked" />

                <RadioButton
                    android:id="@+id/radio_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mood4"
                    android:onClick="onRadioButtonClicked" />

                <RadioButton
                    android:id="@+id/radio_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mood5"
                    android:onClick="onRadioButtonClicked" />
            </RadioGroup>
            <TextView
                android:id="@+id/Mieliala"
                android:layout_width="307dp"
                android:layout_height="37dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:text="@string/Mieliala"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="@+id/Koulu"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/Koulu"
                android:layout_width="365dp"
                android:layout_height="31dp"
                android:layout_marginTop="164dp"
                android:text="@string/Koulu"
                android:textColor="#800000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/Työ"
                android:layout_width="365dp"
                android:layout_height="27dp"
                android:layout_marginTop="32dp"
                android:text="@string/Tyo"
                android:textColor="#FF0000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/Koulu" />

            <Switch
                android:id="@+id/Liikunta"
                android:layout_width="365dp"
                android:layout_height="1dp"
                android:layout_marginTop="60dp"
                android:text="@string/Liikunta"
                android:textColor="#0000FF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/Koulu" />

            <Switch
                android:id="@+id/Elokuva"
                android:layout_width="365dp"
                android:layout_height="23dp"
                android:layout_marginTop="88dp"
                android:text="@string/Elokuva"
                android:textColor="#000080"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/Koulu" />

            <Switch
                android:id="@+id/Siivous"
                android:layout_width="365dp"
                android:layout_height="23dp"
                android:layout_marginTop="112dp"
                android:text="@string/Siivous"
                android:textColor="#008000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/Koulu" />

            <Switch
                android:id="@+id/Kauppa"
                android:layout_width="365dp"
                android:layout_height="23dp"
                android:layout_marginTop="136dp"
                android:text="@string/Kauppa"
                android:textColor="#00FF00"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/Koulu" />

            <Switch
                android:id="@+id/Luku"
                android:layout_width="365dp"
                android:layout_height="23dp"
                android:layout_marginTop="160dp"
                android:text="@string/Lukeminen"
                android:textColor="#FFA500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/Koulu" />

            <Switch
                android:id="@+id/Peli"
                android:layout_width="365dp"
                android:layout_height="23dp"
                android:layout_marginTop="184dp"
                android:text="@string/Peli"
                android:textColor="#FFFF00"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/Koulu" />

            <TextView
                android:id="@+id/MuistiinPanot"
                android:layout_width="368dp"
                android:layout_height="39dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="284dp"
                android:text="@string/Muistiinpanot"
                android:textColor="#000080"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/Koulu" />

            <EditText
                android:id="@+id/addNote"
                android:layout_width="372dp"
                android:layout_height="43dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="348dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.307"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/Koulu" />

        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"

            android:text="@string/add_post"></android.support.v7.widget.AppCompatButton>


    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>